<?xml version="1.0"?>
<package format="2">
  <name>fortyfive_robot_simulations</name>
  <version>1.2.0</version>
  <description>
    ROS packages for the fortyfive_robot simulation (meta package)
  </description>
  <license>Apache 2.0</license>
  <author email="pyo@robotis.com">Pyo</author>
  <author email="thlim@robotis.com">Darby Lim</author>
  <author email="kkjong@robotis.com">Gilbert</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <maintainer email="thlim@robotis.com">Darby Lim</maintainer>
  <url type="website">http://wiki.ros.org/turtlebot3_simulations</url>
  <url type="emanual">http://fortyfive_robot.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3_simulations</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3_simulations/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>fortyfive_robot_fake</exec_depend>
  <exec_depend>fortyfive_robot_gazebo</exec_depend>
  <export><metapackage/></export>
</package>